# Livecode

./: .gitignore  README.md  livecode.asd  load.lisp
docs/: ableton-link.md  api.md  installation.md  live-coding.md  mts.md  soundsets.md  timing.md
examples/: demo.lisp
native/: CMakeLists.txt  README.md  livecode-link-bridge.cpp
src/: api.lisp  engine.lisp  link.lisp  midi.lisp  model.lisp  omn.lisp  package.lisp  platform.lisp  soundsets.lisp
tests/: tests.lisp
